...
                    onClick = {
                        receiptsViewModel.resetPrintJob()
                        onDismiss()
                    },
                    modifier = Modifier.padding(end = 8.dp)
                ) {
                    Text("Skip")
                }
                Button(
                    onClick = {
                        selectedMacAddress?.let { mac ->
                            receiptsViewModel.startPrintJob(transactionId, mac)
                        }
...
